--- a/styles1.css
+++ b/styles1.css
@@ -17,6 +17,7 @@ nav ul li {
 	list-style-type: none;
 	padding-left: 20px;
 	text-align: right;
+	display: inline-block;
 }
 
 nav ul li a {
@@ -27,5 +28,56 @@ nav ul li a {
 .hero-box {
 	height: 338px;
 	background-color: #FF00D7;
+	background-image: url("images/hero-image.jpg");
+	background-size: cover;
+	margin: 1%;
+}
+
+h1 {
+	color: #FFFFFF;
+	font-size: 55px;
+	padding-top: 120px;
+	padding-left: 60px;
+}
+
+.col img {
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
+.col {
+	width: 31.3%;
+	float: left;
+	margin: 1%;
+}
+
+/*TABLET*/
+@media (max-width: 768px){
+	h1 {
+		font-size: 40px;
+		text-align: center;
+		padding-left: 0;
+	}
+	
+	.col {
+		width: 48%;
+	}
+	
+	nav ul li {
+		display: block;
+	}
+}
+
+
+/*Mobile*/
+@media (max-width: 500px){
+	h1 {
+		font-size: 28px;
+	}
+	
+	.col {
+		width: 98%;
+	}
 }
 
